[package]
name = "new_nodarium_node"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
nodarium_macros = "0.1.0"
nodarium_utils = "0.1.0"
web-sys = "0.3.69"
glam = "0.27.0"

[profile.release]
opt-level = "s"
